--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 
 body {
     color: whitesmoke;
-    display: block;
     font-family: 'Gruppo';
 }
 
@@ -103,8 +102,7 @@ section {
 
 p {
     width: 90%;
-    padding-left: 15%;
-    margin-top: 3%;
+    padding-left: 11%;
     word-spacing: 7px;
 }
 
@@ -166,7 +164,7 @@ hr {
 .footer {
     padding: 30px;
     clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Gruppo', sans-serif;
     text-align: center;
     padding-top: 200px;
 }
